syntax = "proto3";

package secrets_grpc_proto.secrets.v1;

import "envelope.proto";
import "google/protobuf/timestamp.proto";

message RegisterTokenRequest {
  saflib.common.v1.SafAuth auth = 1;
  saflib.common.v1.SafRequest request = 2;
}

message RegisterTokenResponse {
  // TODO: Add response fields as needed
  string status = 1;
  google.protobuf.Timestamp timestamp = 2;
}
